setting module skeleton

--- a/app/web/main.html
+++ b/app/web/main.html
@@ -19,7 +19,7 @@ ${head.html}
                 </div>
                 <a class="navbar-brand" href="main.html">
                     DEX HUB
-                    <span>v.1.3</span>
+                    <span>v.0.1</span>
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -29,7 +29,7 @@ ${head.html}
                     </a>
                 </div>
                 <form class="navbar-form navbar-left">
-                    <input type="text" class="form-control" placeholder="Search data for analysis" style="width: 175px">
+                    <input type="text" class="form-control" placeholder="Placeholder" style="width: 175px">
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -39,7 +39,7 @@ ${head.html}
                     </li>
                     <li class=" profil-link">
                         <a href="login.html">
-                            <span class="profile-address">luna@company.io</span>
+                            <span class="profile-address">demo@demo.io</span>
                             <img src="images/profile.jpg" class="img-circle" alt="">
                         </a>
                     </li>
