--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -5,18 +5,19 @@
                 Main
             </li>
             <li class="active">
-                <a role="button" id="link_dashboard">Dashboard</a>
+                <a role="button" id="link_dashboard">Dashboard (template)</a>
             </li>
             <li><a role="button" id="link_limitorders">Limit orders</a></li>
-            <li><a role="button" id="link_datatables">Data tables</a></li>
+            <li><a role="button" id="link_settings">Settings</a></li>
+            <li><a role="button" id="link_datatables">Data tables (template)</a></li>
             <li>
                 <a href="#monitoring" data-toggle="collapse" aria-expanded="false">
                     Monitoring<span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="monitoring" class="nav nav-second collapse">
-                    <li><a role="button" id="link_metrics"> Metrics</a></li>
-                    <li><a role="button" id="link_usage"> Usage</a></li>
-                    <li><a role="button" id="link_activity"> Activity</a></li>
+                    <li><a role="button" id="link_metrics"> Metrics  (template)</a></li>
+                    <li><a role="button" id="link_usage"> Usage (template)</a></li>
+                    <li><a role="button" id="link_activity"> Activity (template)</a></li>
                 </ul>
             </li>
             <li class="nav-category">
@@ -27,16 +28,16 @@
                     General<span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="uielements" class="nav nav-second collapse">
-                    <li><a role="button" id="link_panels">Panels</a></li>
-                    <li><a role="button" id="link_typography">Typography</a></li>
-                    <li><a role="button" id="link_icons">Icons</a></li>
-                    <li><a role="button" id="link_buttons">Buttons</a></li>
-                    <li><a role="button" id="link_tabs">Tabs</a></li>
-                    <li><a role="button" id="link_modals">Modals</a></li>
-                    <li><a role="button" id="link_alerts">Alerts</a></li>
-                    <li><a role="button" id="link_loaders">Loaders</a></li>
-                    <li><a role="button" id="link_gridsystem">Grid System</a></li>
-                    <li><a role="button" id="link_draggable">Draggable</a></li>
+                    <li><a role="button" id="link_panels">Panels (template)</a></li>
+                    <li><a role="button" id="link_typography">Typography (template)</a></li>
+                    <li><a role="button" id="link_icons">Icons (template)</a></li>
+                    <li><a role="button" id="link_buttons">Buttons (template)</a></li>
+                    <li><a role="button" id="link_tabs">Tabs (template)</a></li>
+                    <li><a role="button" id="link_modals">Modals (template)</a></li>
+                    <li><a role="button" id="link_alerts">Alerts (template)</a></li>
+                    <li><a role="button" id="link_loaders">Loaders (template)</a></li>
+                    <li><a role="button" id="link_gridsystem">Grid System (template)</a></li>
+                    <li><a role="button" id="link_draggable">Draggable (template)</a></li>
                 </ul>
             </li>
             <li>
@@ -44,8 +45,8 @@
                     Tables design<span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="tables" class="nav nav-second collapse">
-                    <li><a role="button" id="link_tablestyles">Table Styles</a></li>
-                    <li><a role="button" id="link_datatables">Data Tables</a></li>
+                    <li><a role="button" id="link_tablestyles">Table Styles (template)</a></li>
+                    <li><a role="button" id="link_datatables2">Data Tables (template)</a></li>
                 </ul>
             </li>
             <li>
@@ -53,10 +54,10 @@
                     From controls <span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="forms" class="nav nav-second collapse">
-                    <li><a role="button" id="link_basicelements"> Basic elements</a></li>
-                    <li><a role="button" id="link_autocomplete"> Autocomplete</a></li>
-                    <li><a role="button" id="link_selectioncontrols"> Selection controls</a></li>
-                    <li><a role="button" id="link_texteditor"> Text editor</a></li>
+                    <li><a role="button" id="link_basicelements"> Basic elements (template)</a></li>
+                    <li><a role="button" id="link_autocomplete"> Autocomplete (template)</a></li>
+                    <li><a role="button" id="link_selectioncontrols"> Selection controls (template)</a></li>
+                    <li><a role="button" id="link_texteditor"> Text editor (template)</a></li>
                 </ul>
             </li>
             <li>
@@ -64,10 +65,10 @@
                     Charts and graphs<span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="charts" class="nav nav-second collapse">
-                    <li><a role="button" id="link_flotcharts">Flot charts</a></li>
-                    <li><a role="button" id="link_chartjs">CharJS</a></li>
-                    <li><a role="button" id="link_sparkline">Sparkline</a></li>
-                    <li><a role="button" id="link_datamaps">datamaps</a></li>
+                    <li><a role="button" id="link_flotcharts">Flot charts (template)</a></li>
+                    <li><a role="button" id="link_chartjs">CharJS (template)</a></li>
+                    <li><a role="button" id="link_sparkline">Sparkline (template)</a></li>
+                    <li><a role="button" id="link_datamaps">datamaps (template)</a></li>
                 </ul>
             </li>
 
@@ -79,12 +80,12 @@
                     Basic <span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="extras" class="nav nav-second collapse">
-                    <li><a role="button" id="link_profile">Profile</a></li>
-                    <li><a role="button" id="link_contacts">Contacts</a></li>
-                    <li><a role="button" id="link_projects">Projects</a></li>
-                    <li><a role="button" id="link_support">Support</a></li>
-                    <li><a role="button" id="link_nestablelist">List</a></li>
-                    <li><a role="button" id="link_timeline">Timeline</a></li>
+                    <li><a role="button" id="link_profile">Profile (template)</a></li>
+                    <li><a role="button" id="link_contacts">Contacts (template)</a></li>
+                    <li><a role="button" id="link_projects">Projects (template)</a></li>
+                    <li><a role="button" id="link_support">Support (template)</a></li>
+                    <li><a role="button" id="link_nestablelist">List (template)</a></li>
+                    <li><a role="button" id="link_timeline">Timeline (template)</a></li>
                 </ul>
             </li>
             <li>
@@ -92,16 +93,16 @@
                     Common <span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="common" class="nav nav-second collapse">
-                    <li><a role="button" id="link_login">Login</a></li>
-                    <li><a role="button" id="link_register">Register</a></li>
-                    <li><a role="button" id="link_forgotpassword">Forgot password</a></li>
-                    <li><a role="button" id="link_error">Error Page</a></li>
+                    <li><a role="button" id="link_login">Login (template)</a></li>
+                    <li><a role="button" id="link_register">Register (template)</a></li>
+                    <li><a role="button" id="link_forgotpassword">Forgot password (template)</a></li>
+                    <li><a role="button" id="link_error">Error Page (template)</a></li>
                 </ul>
             </li>
             <li>
                 <a role="button" id="link_versions">
                     <span class="badge pull-right">2</span>
-                    Versions
+                    Versions (template)
                 </a>
             </li>
             <li class="nav-info">
