--- a/app/web/settings.html
+++ b/app/web/settings.html
@@ -18,47 +18,75 @@
         <hr>
     </div>
 </div>
-    <div class="row">
-        <button id="bReloadOrders" class="btn btn-accent btn-sm">Reload Orders</button> <button id="bBalances" class="btn btn-accent btn-sm">Balances</button>
-    </div>
-</br>
-            <div class="row m-t-lg">
-                <div class="col-lg-12">
-                    <div class="tabs-container">
+<div class="row m-t-lg">
+    <div class="col-lg-8">
+        <div class="tabs-container">
 
-                        <div class="tabs-left">
-                            <ul class="nav nav-tabs">
-                                <li class="active"><a data-toggle="tab" href="#tab-6"> This is tab</a></li>
-                                <li class=""><a data-toggle="tab" href="#tab-7">This is second tab</a></li>
-                            </ul>
-                            <div class="tab-content ">
-                                <div id="tab-6" class="tab-pane active">
-                                    <div class="panel-body">
-                                        <strong class="c-white">Lorem ipsum dolor sit amet, consectetuer adipiscing</strong>
-
-                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of
-                                            existence in this spot, which was created for the bliss of souls like mine.</p>
-
-                                        <p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at
-                                            the present moment; and yet I feel that I never was a greater artist than now. When.</p>
-                                    </div>
-                                </div>
-                                <div id="tab-7" class="tab-pane">
-                                    <div class="panel-body">
-                                        <strong class="c-white">Donec quam felis</strong>
-
-                                        <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects
-                                            and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath </p>
-
-                                        <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite
-                                            sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet.</p>
-                                    </div>
-                                </div>
+            <div class="tabs-left">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#tab-1">Account settings</a></li>
+                    <li class=""><a data-toggle="tab" href="#tab-2">Misc settings</a></li>
+                </ul>
+                <div class="tab-content ">
+                    <div id="tab-1" class="tab-pane active">
+                        <div class="panel-body">
+                            <strong class="c-white">Account related settings</strong>
+                            <p>Multiple accounts can be entered for a consolidation of the balances.</p>
+                            <br>
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Familiar name</th>
+                                        <th>Bitshares account</th>
+                                        <th>Has wif key</th>
+                                        <th>Operations</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td>Abraham</td>
+                                        <td>076 9477 4896</td>
+                                        <td>Vosselaar</td>
+                                        <td><button id="bDelAccount1" class="btn btn-accent btn-sm">Delete</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Phelan</td>
+                                        <td>0500 034548</td>
+                                        <td>Lavoir</td>
+                                        <td><button id="bDelAccount2" class="btn btn-accent btn-sm">Delete</button></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
+                            <br>
+                            <button id="bNewAccount" class="btn btn-accent btn-sm">New Account</button>
+                            <br><br>
+                            <form>
+                                <div class="form-group"><label for="exampleInputName">Bitshares account name</label> <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
+                                    <p class="help-block">Must be a real account in Bitshares</p></div>
+                                <div class="form-group"><label for="exampleInputEmail1">Familiar name</label> <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+                                    <p class="help-block">Used for display</p></div>
+                                <div class="form-group"><label for="exampleInputPassword1">Wif key</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="wif format">
+                                    <p class="help-block">Key will be stored in encrypted form</p></div>
 
+                                <button type="submit" class="btn btn-default">Save</button>
+                            </form>
                         </div>
-
                     </div>
+                    <div id="tab-2" class="tab-pane">
+                        <div class="panel-body">
+                            <strong class="c-white">Connection settings</strong>
+                            <p>Node preferences</p>
+
+                            <strong class="c-white">Misc settings</strong>
+                            <p>Another settings</p>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
+        </div>
+
+    </div>
