balance module multi account balance multi account limit orders

--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -7,6 +7,7 @@
             <li class="active">
                 <a role="button" id="link_dashboard">Dashboard (template)</a>
             </li>
+            <li><a role="button" id="link_balances">Balances</a></li>
             <li><a role="button" id="link_limitorders">Limit orders</a></li>
             <li><a role="button" id="link_settings">Settings</a></li>
             <li><a role="button" id="link_datatables">Data tables (template)</a></li>
