--- a/app/web/settings.html
+++ b/app/web/settings.html
@@ -6,7 +6,7 @@
                 <small>Main<br>General<br> <span class="c-white">Settings</span></small>
             </div>
             <div class="header-icon">
-                <i class="pe page-header-icon pe-7s-albums"></i>
+                <i class="pe page-header-icon pe-7s-settings"></i>
             </div>
             <div class="header-title">
                 <h3>Settings</h3>
