--- a/app/web/limit_orders.html
+++ b/app/web/limit_orders.html
@@ -22,7 +22,7 @@
         <button id="bReloadOrders" class="btn btn-accent btn-sm">Reload Orders</button> <button id="bBalances" class="btn btn-accent btn-sm">Balances</button>
     </div>
 </br>
-<div class="col-md-2 pre-scrollable" style="height:700px; direction: rtl;">
+<div class="col-md-2 pre-scrollable" style="max-height:650px; direction: rtl;">
     <ul id="nav1" class="nav nav-tabs nav-stacked"  style="height:100%; direction: ltr;">
         <li class="active"><a data-toggle="tab" href="#tab-1" aria-expanded="true">Full table</a></li>
     </ul>
