Collateral added to balance total. Balances cache.

--- a/app/web/balances.html
+++ b/app/web/balances.html
@@ -40,7 +40,7 @@
                         <div class="panel-body">
                             <h4>Total <span id="lTotal">$</span></h4>
                             <div class="table-responsive">
-                                <table id="table2" class="table">
+                                <table id="table2" class="table table-hover table-striped">
                                 </table>
                             </div>
                         </div>
