--- a/app/web/marketpanels.html
+++ b/app/web/marketpanels.html
@@ -9,9 +9,9 @@
                 <i class="pe page-header-icon pe-7s-next-2"></i>
             </div>
             <div class="header-title">
-                <h3>Market dashboard</h3>
+                <h3>Market Panels</h3>
                 <small>
-                    Drag & drop trade panels
+                    Draggable market panels
                 </small>
             </div>
         </div>
@@ -21,8 +21,8 @@
 
 
 <div class="row draggable-container">
-    <div class="col-md-3" id="col_1"><p></p><div id="newpanel"></div></div>
-    <div class="col-md-3" id="col_2"><p></p></div>
-    <div class="col-md-3" id="col_3"><p></p></div>
-    <div class="col-md-3" id="col_4"><p></p></div>
+    <div class="col-md-3" id="col_1"><p></p><div id="newpanel_1"></div></div>
+    <div class="col-md-3" id="col_2"><p></p><div id="newpanel_2"></div></div>
+    <div class="col-md-3" id="col_3"><p></p><div id="newpanel_3"></div></div>
+    <div class="col-md-3" id="col_4"><p></p><div id="newpanel_4"></div></div>
 </div>
