--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -4,11 +4,10 @@
             <li class="nav-category">
                 Main
             </li>
-            <li class="active">
-                <a role="button" id="link_dashboard">Dashboard (template)</a>
-            </li>
+            <li class="active"><a role="button" id="link_dashboard">Dashboard (template)</a></li>
             <li><a role="button" id="link_balances">Balances</a></li>
             <li><a role="button" id="link_settings">Settings</a></li>
+            <li><a role="button" id="link_marketpanels">Market Panels</a></li>
 
             <li>
                 <a href="#limitorders" data-toggle="collapse" aria-expanded="false">
@@ -49,7 +48,6 @@
                     <li><a role="button" id="link_alerts">Alerts (template)</a></li>
                     <li><a role="button" id="link_loaders">Loaders (template)</a></li>
                     <li><a role="button" id="link_gridsystem">Grid System (template)</a></li>
-                    <li><a role="button" id="link_draggable">Draggable (template)</a></li>
                 </ul>
             </li>
             <li>
