--- a/app/web/scripts.html
+++ b/app/web/scripts.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="scripts/brython.js"></script>
 <script type="text/javascript" src="scripts/brython_stdlib.js"></script>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
-<script src="vendor/jquery-ui/jquery-ui.min.js"></script>
+<script src="vendor/jquery-ui/jquery-ui.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="vendor/toastr/toastr.min.js"></script>
 <script src="vendor/sparkline/index.js"></script>
