--- a/app/web/balances.html
+++ b/app/web/balances.html
@@ -21,6 +21,9 @@
 </div>
 <div class="row m-t-lg">
     <div class="col-lg-9">
+    <div id="account_selector"></div>
+    </div>
+    <div class="col-lg-9">
         <div class="tabs-container">
             <div class="tabs-left">
                 <ul class="nav nav-tabs">
@@ -28,7 +31,7 @@
                     <li class=""><a data-toggle="tab" href="#tab-table">Table</a></li>
                     <li class=""><a data-toggle="tab" href="#tab-datatable">Datatable</a></li>
                 </ul>
-                <div class="tab-content ">
+                <div class="tab-content">
                     <div id="tab-charts" class="tab-pane active">
                         <div class="panel-body" id="balances_charts" style="width:100%; height:600px;">
                             <div id="echart1" style="height:400px; display: none;"></div>
