bug in balances

--- a/app/web/balances.html
+++ b/app/web/balances.html
@@ -34,11 +34,13 @@
                 <div class="tab-content">
                     <div id="tab-charts" class="tab-pane active">
                         <div class="panel-body" id="balances_charts" style="width:100%; height:600px;">
+                            <h5><span id="lAcc1"></span></h5>
                             <div id="echart1" style="height:400px; display: none;"></div>
                         </div>
                     </div>
                     <div id="tab-table" class="tab-pane">
                         <div class="panel-body">
+                            <h5><span id="lAcc2"></span></h5>
                             <div class="pre-scrollable" style="max-height:500px;">
                                 <div id="table1" class="table-responsive">
                                 </div>
@@ -47,6 +49,7 @@
                     </div>
                     <div id="tab-datatable" class="tab-pane">
                         <div class="panel-body">
+                            <h5><span id="lAcc3"></span></h5>
                             <h4>Total <span id="lTotal">$</span></h4>
                             <div class="table-responsive">
                                 <table id="table2" class="table table-hover table-striped">
