fix reloading market panels

--- a/app/web/main.html
+++ b/app/web/main.html
@@ -55,7 +55,7 @@ ${head.html}
     <!-- End navigation-->
 
 
-    <!-- Main content-->
+    <!-- Unlock modal-->
     <section class="content">
         <div class="modal fade" id="modal_master_password" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
             <div class="modal-dialog">
@@ -65,7 +65,7 @@ ${head.html}
                         <small>Unlocks wif keys for doing operations.</small>
                     </div>
                     <div class="modal-body">
-                            <div class="form-group"><label for="iMPpasshrase">Master password</label> <input type="text" class="form-control" id="iMPpasshrase" placeholder="passphrase">
+                            <div class="form-group"><label for="iMPpasshrase">Master password</label> <input type="password" class="form-control" id="iMPpasshrase" placeholder="passphrase">
                                 <p class="help-block">Case sensitive</p></div>
                         <p id="MPerror"></p>
                     </div>
