--- a/app/web/settings.html
+++ b/app/web/settings.html
@@ -55,29 +55,14 @@
                         <div class="panel-body">
                             <strong class="c-white">Bases priority</strong>
                             <p>Preferences for pair composition. (Quote/Base)</p>
+                            <button id="bBasesReset" class="btn btn-default">Reset</button>
+                            <button id="bBasesResetOrder" class="btn btn-default">Order by use</button>
+                            <button id="bBasesSave" class="btn btn-accent" type="button"><i class="fa fa-upload"></i> <span class="bold">Save</span></button>
                             <br>
                             <div class="col-lg-6">
-                                <form>
-                                    <div class=form-group>
-                                        <label>Selects</label>
-                                    </div>
-                                        <select id="lTokens" class="form-control">
-                                            <option>Unable to load</option>
-                                        </select>
-                                </form>
-                            </div>
-                            <div class="col-lg-6">
-                                <div id="table2" class="table-responsive">
-                                </div>
                                 <br>
-                                <button id="bNewPair" class="btn btn-accent btn-sm">New Account</button>
-                                <br><br>
-                                <div id="form1" onsubmit="return false;" class="form-horizontal form-group-separated hidden" style="margin-left:40px;margin-right:80px;">
-                                    <div class="form-group"><label for="iNamexxx">Bitshares account name</label> <input type="text" class="form-control" id="iNamexxx" placeholder="Name">
-                                        <p class="help-block">Must be a real account in Bitshares</p></div>
-                                    <button id="bSave2" class="btn btn-accent">Save</button>
-                                    <button id="bCancel2" class="btn btn-default">Cancel</button>
-                                </div>
+                                <div id="table2" class="table-responsive"></div>
+                                <br>
                             </div>
                         </div>
                     </div>
